Upgraded dependencies, plugins and JDK to 17